Fix spacing within react-wrapper

--- a/backend/seeds/static/seeds/styles.css
+++ b/backend/seeds/static/seeds/styles.css
@@ -15,6 +15,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* height: 100%;
+    width: 100%; */
 }
 
 html {
@@ -113,9 +115,21 @@ header:after {
 }
 
 #react-root {
+    height: 100%;
     width: 100%;
 }
 
+#block-body {
+    height: 100%;
+}
+
+#react-wrapper {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: .5rem;
+}
 main {
     display: flex;
     flex-direction: column;
@@ -160,6 +174,7 @@ main ul {
 #actionbar {
     width: 100%;
     height: 1rem;
+    padding-bottom: .5rem;
     /* background-color: var(--bg); */
     border-bottom: var(--border);
     display: flex;
